--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -4,13 +4,16 @@
     flex-direction: column;
     width: 264px;
 }
-
+.searchHeading {
+font-weight: bold;
+}
 .seacrchForm label {
     margin-bottom: 4px;
 }
 
 .searchInput {
     transition: outline-color 100ms ease-in-out;
+    width: 400px;
 }
 
 .searchInput:focus {
