--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,26 +1,20 @@
-.userItem {
-    border: 1px solid black;
-    border-radius: 5px;
-    width: 200px;
-    height: 100px;
-    padding: 12px;
-    border-radius: 4px;
+.contactBox {
+    border: 2px solid black;
+    border-radius: 8px;
+    width: 400px;
+    margin-bottom: 15px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    text-align: justify;
     align-items: center;
-    width: calc((100% - 36px) / 4);
 }
-
-.nameContainer {
-    margin-bottom: 8px;
+  
+.icon {
+    margin-right: 10px;
+    font-size: x-large;
 }
-
-.nameContainer,
-.phoneContainer {
-    display: flex;
-    gap: 4px;
-}
-
-.deleteButton {
-    padding: 4px 8px;
-}
+  
+.text {
+    font-size: 19px;
+    font-weight: 600;
+ }
