--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  color: #213547;
+  color: #0b385f;
   animation: tracking-in-contract-bck-bottom 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
 
 }
@@ -57,6 +57,7 @@ h1 {
 
 
 button {
+  width: 180px;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -66,7 +67,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-  margin-right: 10px; 
+  margin: 0 auto; 
 }
 button:hover {
   border: 1px solid #646cff;
